--- a/systemwidget/src/main/res/layout/content_main.xml
+++ b/systemwidget/src/main/res/layout/content_main.xml
@@ -58,7 +58,8 @@
         app:inlineColor="@color/material_red_400"
         app:stoke="12dp"
         android:textSize="16sp"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:text="MyTextView 文字"/>
 
 
 </LinearLayout>
