--- a/systemwidget/src/main/res/layout/content_main.xml
+++ b/systemwidget/src/main/res/layout/content_main.xml
@@ -61,5 +61,15 @@
         android:textColor="#000"
         android:text="MyTextView 文字"/>
 
+    <com.cn.guojinhu.systemwidget.TeachingView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <com.cn.guojinhu.systemwidget.TeachingView
+        android:layout_width="300"
+        android:layout_height="300" />
+
+
+
 
 </LinearLayout>
