--- a/systemwidget/src/main/res/layout/content_main.xml
+++ b/systemwidget/src/main/res/layout/content_main.xml
@@ -66,9 +66,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <com.cn.guojinhu.systemwidget.TeachingView
-        android:layout_width="300dp"
-        android:layout_height="300dp" />
+    <com.cn.guojinhu.systemwidget.TriGraph
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:gap="16dp"/>
 
 
 
