--- a/systemwidget/src/main/res/values/dimens.xml
+++ b/systemwidget/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="def_title_text_size">16sp</dimen>
 
     <dimen name="def_stoke">10dp</dimen>
+
+    <dimen name="def_gap">20dp</dimen>
 </resources>
