--- a/notificationdemo/src/main/res/layout/content_main.xml
+++ b/notificationdemo/src/main/res/layout/content_main.xml
@@ -16,5 +16,5 @@
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Cancel" />
 </RelativeLayout>
