--- a/game2048/src/main/res/layout/activity_game.xml
+++ b/game2048/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cn.guojinhu.game2048.GameActivity">
+    tools:context=".activity.GameActivity">
 
     <TextView
         android:layout_width="wrap_content"
