--- a/game2048/src/main/res/values/dimens.xml
+++ b/game2048/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="title_board_height">80dp</dimen>
+    <dimen name="def_padding">3dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
