--- a/game2048/src/main/res/layout/activity_game.xml
+++ b/game2048/src/main/res/layout/activity_game.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/text_target"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -55,8 +56,8 @@
                     android:id="@+id/text_score_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="80dp"
                     android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="80dp"
                     android:padding="@dimen/def_padding"
                     android:text="@string/score_title"
                     android:textSize="20sp" />
@@ -80,8 +81,8 @@
                     android:id="@+id/text_record_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="80dp"
                     android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="80dp"
                     android:padding="@dimen/def_padding"
                     android:text="@string/record_title"
                     android:textSize="20sp" />
@@ -91,19 +92,22 @@
     </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/game_panel_root"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
+
 
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_restart"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="3dp"
@@ -111,10 +115,10 @@
             android:background="@drawable/blue_button"
             android:elevation="5dp"
             android:text="restart"
-
             android:textAppearance="?android:textAppearanceMediumInverse" />
 
         <Button
+            android:id="@+id/btn_revert"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="3dp"
@@ -125,6 +129,7 @@
             android:textAppearance="?android:textAppearanceMediumInverse" />
 
         <Button
+            android:id="@+id/btn_settings"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="3dp"
