--- a/game2048/src/main/res/values/arrays.xml
+++ b/game2048/src/main/res/values/arrays.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="size_value">
+    <string-array name="line_value">
         <item> 默认 </item>
         <item> 简单 </item>
         <item> 普通 </item>
         <item> 困难 </item>
     </string-array>
-    <string-array name="size">
+    <string-array name="line">
         <item> -1 </item>
         <item> 3 </item>
         <item> 4 </item>
