--- a/inputdemo/src/main/res/layout/float_window.xml
+++ b/inputdemo/src/main/res/layout/float_window.xml
@@ -11,15 +11,7 @@
         android:layout_height="match_parent"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/percent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp"
-        android:gravity="center"
-        android:text="20jjjjj"
-        android:textColor="#ffffff" />
+
 
     <ImageButton
         android:id="@+id/close_button"
@@ -28,21 +20,46 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/ic_clear_black_24dp"/>
+        android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/ic_clear_black_24dp"
+        android:contentDescription="@string/button_close" />
 
     <ImageButton
-        android:id="@+id/paly_pause"
+        android:id="@+id/paly_pause_button"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
         android:layout_marginStart="5dp"
-        android:background="@drawable/ic_play_arrow_black_24dp" />
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/button_play_pause"
+        android:src="@drawable/ic_play_arrow_black_24dp"
+        />
+    <TextView
+        android:id="@+id/percent"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="3dp"
+        android:textColor="#ffffff"
+        android:text="aaaa"
+        android:gravity="center_vertical"
+        android:layout_alignParentBottom="true"
+        android:textSize="14sp"
+        android:layout_toEndOf="@id/paly_pause_button"
+        android:visibility="gone"/>
     <SeekBar
+        android:id="@+id/position_seekbar"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
-        android:layout_toEndOf="@id/paly_pause"/>
+        android:progress="50"
+        android:secondaryProgress="75"
+        android:layout_toEndOf="@id/percent"
+        android:secondaryProgressTint="@color/colorAccent"
+        android:progressBackgroundTint="#000000"
+        />
+
 
 </RelativeLayout>
