--- a/inputdemo/src/main/res/layout/float_window.xml
+++ b/inputdemo/src/main/res/layout/float_window.xml
@@ -12,7 +12,6 @@
         android:visibility="visible" />
 
 
-
     <ImageButton
         android:id="@+id/close_button"
         android:layout_width="24dp"
@@ -21,33 +20,29 @@
         android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
         android:background="?android:attr/selectableItemBackground"
-        android:src="@drawable/ic_clear_black_24dp"
-        android:contentDescription="@string/button_close" />
+        android:contentDescription="@string/button_close"
+        android:src="@drawable/ic_highlight_off_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/back_normal_button"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/button_back_to_normal"
+        android:src="@drawable/ic_cloud_off_black_24dp" />
 
     <ImageButton
         android:id="@+id/paly_pause_button"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="5dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerInParent="true"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/button_play_pause"
-        android:src="@drawable/ic_play_arrow_black_24dp"
-        />
-    <TextView
-        android:id="@+id/percent"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="3dp"
-        android:textColor="#ffffff"
-        android:text="aaaa"
-        android:gravity="center_vertical"
-        android:layout_alignParentBottom="true"
-        android:textSize="14sp"
-        android:layout_toEndOf="@id/paly_pause_button"
-        android:visibility="gone"/>
+        android:src="@drawable/ic_play_circle_filled_black_24dp" />
+
     <SeekBar
         android:id="@+id/position_seekbar"
         android:layout_width="match_parent"
@@ -55,11 +50,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
         android:progress="50"
-        android:secondaryProgress="75"
-        android:layout_toEndOf="@id/percent"
-        android:secondaryProgressTint="@color/colorAccent"
         android:progressBackgroundTint="#000000"
-        />
-
+        android:secondaryProgress="75"
+        android:secondaryProgressTint="@color/colorAccent" />
 
 </RelativeLayout>
