--- a/systemwidget/src/main/res/layout/activity_scroll.xml
+++ b/systemwidget/src/main/res/layout/activity_scroll.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cn.guojinhu.systemwidget.ScrollActivity">
-    <com.cn.guojinhu.systemwidget.MyScrollerView
+    tools:context="com.cn.guojinhu.systemwidget.activity.ScrollActivity">
+    <com.cn.guojinhu.systemwidget.view.MyScrollerView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
@@ -29,7 +29,7 @@
             android:src="@drawable/test4"/>
 
 
-    </com.cn.guojinhu.systemwidget.MyScrollerView>
+    </com.cn.guojinhu.systemwidget.view.MyScrollerView>
 
 
 </LinearLayout>
