--- a/systemwidget/src/main/res/layout/activity_test.xml
+++ b/systemwidget/src/main/res/layout/activity_test.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.cn.guojinhu.systemwidget.TestActivity">
+    tools:context="com.cn.guojinhu.systemwidget.activity.TestActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_test" />
+    <include
+        layout="@layout/content_test"
+         />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
