--- a/systemwidget/src/main/res/layout/content_main.xml
+++ b/systemwidget/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.cn.guojinhu.systemwidget.MainActivity"
+    tools:context="com.cn.guojinhu.systemwidget.activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="Hello World!" />
 
-    <com.cn.guojinhu.systemwidget.TopBar
+    <com.cn.guojinhu.systemwidget.view.TopBar
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -27,7 +27,8 @@
         custom:rightTextColor="#FFFFFF"
         custom:titleText="自定义标题"
         custom:titleTextColors="#123412"
-        custom:titleTextSize="15sp"></com.cn.guojinhu.systemwidget.TopBar>
+        custom:titleTextSize="15sp">
+    </com.cn.guojinhu.systemwidget.view.TopBar>
 
     <com.cn.guojinhu.systemwidget.Extra.TopBar
         android:id="@+id/topBar2"
@@ -45,7 +46,7 @@
 
     </com.cn.guojinhu.systemwidget.Extra.TopBar>
 
-    <com.cn.guojinhu.systemwidget.ShineTextView
+    <com.cn.guojinhu.systemwidget.view.ShineTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="自定义内容.........." />
@@ -56,7 +57,7 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <com.cn.guojinhu.systemwidget.MyTextView
+        <com.cn.guojinhu.systemwidget.view.MyTextView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:gravity="center"
@@ -67,11 +68,11 @@
             app:outlineColor="@color/material_red_700"
             app:stoke="12dp" />
 
-        <com.cn.guojinhu.systemwidget.TeachingView
+        <com.cn.guojinhu.systemwidget.view.TeachingView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <com.cn.guojinhu.systemwidget.TriGraph
+        <com.cn.guojinhu.systemwidget.view.TriGraph
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:gap="16dp" />
@@ -83,7 +84,7 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <com.cn.guojinhu.systemwidget.VolumeView
+        <com.cn.guojinhu.systemwidget.view.VolumeView
             android:layout_width="200dp"
             android:layout_height="200dp" />
 
