--- a/systemwidget/src/main/res/layout/content_test.xml
+++ b/systemwidget/src/main/res/layout/content_test.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cn.guojinhu.systemwidget.TestActivity"
-    tools:showIn="@layout/activity_test"
-    android:background="@color/material_green_800">
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.cn.guojinhu.systemwidget.activity.TestActivity"
+    tools:showIn="@layout/activity_test">
 
-    <com.cn.guojinhu.systemwidget.KeyguardView
+    <!--<com.cn.guojinhu.systemwidget.view.KeyguardView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/keyguard"
@@ -17,6 +19,47 @@
         app:layout_constraintCenterX_toCenterX="@id/content_test"
         app:layout_constraintCenterY_toCenterY="@id/content_test"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp" />-->
+    <!--<com.cn.guojinhu.systemwidget.view.CustomTitleView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        custom:customTitleText="2333"
+        android:layout_centerInParent="true"
+        custom:customTitleTextColor="#000"
+        custom:customTitleTextSize="40sp"
+        android:padding="10dp"
+        />-->
+    <com.cn.guojinhu.systemwidget.view.CustomImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:customImage="@mipmap/ic_launcher"
+        app:customImageScaleType="center"
+        app:customImageText="1111111111111"
+        app:customImageTextColor="#ff0000"
+        app:customImageTextSize="30sp" />
 
-</android.support.constraint.ConstraintLayout>
+    <com.cn.guojinhu.systemwidget.view.CustomImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:customImage="@mipmap/ic_launcher"
+        app:customImageScaleType="center"
+        app:customImageText="2222222222222222222222222222222222"
+        app:customImageTextColor="#ff0000"
+        app:customImageTextSize="20sp" />
+
+    <com.cn.guojinhu.systemwidget.view.CustomImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10sp"
+        app:customImage="@drawable/qingcheng_home_loading"
+        app:customImageScaleType="center"
+        app:customImageText="loading"
+        app:customImageTextColor="#ff0000"
+        app:customImageTextSize="20sp" />
+
+</LinearLayout>
