--- a/systemwidget/src/main/res/values/dimens.xml
+++ b/systemwidget/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="def_gap">20dp</dimen>
 
     <dimen name="circle_radius">25dp</dimen>
+
+    <dimen name="text_size">16sp</dimen>
 </resources>
