--- a/systemwidget/src/main/res/layout/activity_web_view.xml
+++ b/systemwidget/src/main/res/layout/activity_web_view.xml
@@ -26,6 +26,7 @@
         android:paddingStart="10dp"
         android:layout_marginTop="10dp"
         android:text="用户同意"
+        android:enabled="false"
         android:textColor="@drawable/selector_checkbox_textcolor"
         />
 
